# tree-sitter-ana

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  build.rs  bun.lockb  example.ana  go.mod  grammar.js  package.json  parser.exp  parser.lib  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-ana.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_ana/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAna/: ana.h
bindings/swift/TreeSitterAnaTests/: TreeSitterAnaTests.swift
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: array  array.scm  param.scm  property.scm  ref  ref.scm  slice  type.scm  union.scm
